# ginseng

./: .gitignore  README.md  justfile  pyproject.toml  zensical.toml
.github/workflows/: ci.yml
docs/: api.md  index.md  parse.py  usage.md
docs/guides/: basic.md  uterine.md
docs/stylesheets/: extra.css
docs/tutorials/: uterine.md
docs/usage/: annotation.md
site/: 404.html  index.html  parse.py  search.json
site/api/: index.html
site/guides/basic/: index.html
site/guides/uterine/: index.html
site/stylesheets/: extra.css
src/ginseng/: __init__.py  annotate.py  augment.py  data.py  io.py  nn.py  opt.py  train.py  utils.py
src/ginseng/data/: __init__.py  dataset.py  io.py
src/ginseng/model/: __init__.py  instance.py  nn.py  predict.py  state.py
src/ginseng/train/: __init__.py  augment.py  logger.py  opt.py  trainer.py
src/ginseng/utils/: __init__.py  hvg.py
src/tests/: README.md  conftest.py  test_annotate.py  test_augment.py  test_data.py  test_io.py  test_nn.py  test_opt.py  test_train.py  test_utils.py
src/tests/data/: test_dataset.py  test_io.py
src/tests/model/: test_instance.py  test_nn.py  test_predict.py
src/tests/train/: test_augment.py  test_opt.py  test_trainer.py
src/tests/utils/: test_hvg.py
