[project]
name = "ginseng"
version = "0.2.0"
description = "Efficient and accurate annotation for single-cell sequencing data"
readme = "README.md"
authors = [
    { name = "Tom Ouellette", email = "touellette112@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.2",
    "jax>=0.7.1",
    "jaxtyping>=0.3.2",
    "numpy>=2.2",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]

[tool.setuptools]
exclude-package-data = { "" = ["src/tests/data/*"] }

[dependency-groups]
docs = [
    "zensical>=0.0.5",
]
dev = [
    "pytest>=8.3.5",
	"numpydoc"
]

[project.scripts]
ginseng = "ginseng:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# F722 ignores forward annotation syntax rules (e.g in anci.Arg)
ignore = ["F722"]  

[tool.ruff.lint]
# E402 is "Module level import not at top of file"
per-file-ignores = { "__init__.py" = ["E402"] }
